--- a/iap/universal-links.mdx
+++ b/iap/universal-links.mdx
@@ -27,23 +27,74 @@ In Xcode, add the Associated Domains capability to your app target:
 
 Your entitlements file should include:
 
-```xml
+<CodeGroup>
+```xml iOS (Associated Domains)
 <key>com.apple.developer.associated-domains</key>
 <array>
     <string>applinks:api.zerosettle.io</string>
 </array>
 ```
 
+```xml Android (Intent Filter)
+<intent-filter android:autoVerify="true">
+    <action android:name="android.intent.action.VIEW" />
+    <category android:name="android.intent.category.DEFAULT" />
+    <category android:name="android.intent.category.BROWSABLE" />
+    <data android:scheme="https" android:host="api.zerosettle.io" />
+</intent-filter>
+```
+
+```tsx React Native
+// React Native handles deep links via native configuration.
+// iOS: Add Associated Domains in Xcode (see Swift tab).
+// Android: Add intent-filter in AndroidManifest.xml (see Kotlin tab).
+```
+
+```dart Flutter
+// Flutter handles deep links via the app's native configuration.
+// iOS: Add Associated Domains in Xcode (see Swift tab).
+// Android: Add intent-filter in AndroidManifest.xml (see Kotlin tab).
+```
+</CodeGroup>
+
 ### Developer Mode
 
 During development, add `?mode=developer` to bypass Apple's AASA caching:
 
-```xml
+<CodeGroup>
+```xml iOS (Developer Mode)
 <key>com.apple.developer.associated-domains</key>
 <array>
     <string>applinks:api.zerosettle.io?mode=developer</string>
 </array>
 ```
+
+```xml Android (Intent Filter)
+<!-- Android App Links use Digital Asset Links for verification.
+     There is no separate developer mode — autoVerify works immediately
+     once the assetlinks.json file is hosted on the domain. -->
+<intent-filter android:autoVerify="true">
+    <action android:name="android.intent.action.VIEW" />
+    <category android:name="android.intent.category.DEFAULT" />
+    <category android:name="android.intent.category.BROWSABLE" />
+    <data android:scheme="https" android:host="api.zerosettle.io" />
+</intent-filter>
+```
+
+```tsx React Native
+// React Native handles deep links via native configuration.
+// iOS: Add Associated Domains in Xcode (see Swift tab).
+// Android: Add intent-filter in AndroidManifest.xml (see Kotlin tab).
+// There is no separate developer mode for React Native.
+```
+
+```dart Flutter
+// Flutter handles deep links via the app's native configuration.
+// iOS: Add Associated Domains in Xcode (see Swift tab).
+// Android: Add intent-filter in AndroidManifest.xml (see Kotlin tab).
+// There is no separate developer mode for Flutter.
+```
+</CodeGroup>
 
 | Mode | Behavior |
 |------|----------|
@@ -73,9 +124,10 @@ We'll add your app to our `apple-app-site-association` file hosted at `https://a
 
 ### SwiftUI
 
-Use the `.zeroSettleHandler()` view modifier on your root view:
+Use the `.zeroSettleHandler()` view modifier on your root view (or handle deep links in your Android Activity):
 
-```swift
+<CodeGroup>
+```swift Swift
 @main
 struct YourApp: App {
     var body: some Scene {
@@ -87,11 +139,45 @@ struct YourApp: App {
 }
 ```
 
-This automatically handles both `onOpenURL` and `onContinueUserActivity` for you.
+```kotlin Kotlin
+class MainActivity : ComponentActivity() {
+    override fun onNewIntent(intent: Intent?) {
+        super.onNewIntent(intent)
+        intent?.data?.let { uri ->
+            ZeroSettle.handleDeepLink(uri)
+        }
+    }
+
+    override fun onResume() {
+        super.onResume()
+        ZeroSettle.onResume()
+    }
+}
+```
+
+```tsx React Native
+import { ZeroSettle } from 'react-native-zerosettle-kit';
+import { Linking } from 'react-native';
+
+// Handle deep links
+Linking.addEventListener('url', ({ url }) => {
+  ZeroSettle.handleUniversalLink(url);
+});
+```
+
+```dart Flutter
+// Flutter handles deep links automatically via the native plugin.
+// Ensure your iOS Associated Domains and Android intent-filter are configured.
+await ZeroSettle.instance.handleUniversalLink(url);
+```
+</CodeGroup>
+
+This automatically handles both `onOpenURL` and `onContinueUserActivity` for you on iOS. On Android, `handleDeepLink` parses the callback URI, and `onResume` lets the SDK poll for transaction status when the user returns from the browser.
 
 ### UIKit (SceneDelegate)
 
-```swift
+<CodeGroup>
+```swift Swift
 class SceneDelegate: UIResponder, UIWindowSceneDelegate {
     func scene(_ scene: UIScene, continue userActivity: NSUserActivity) {
         guard userActivity.activityType == NSUserActivityTypeBrowsingWeb,
@@ -103,9 +189,21 @@ class SceneDelegate: UIResponder, UIWindowSceneDelegate {
 }
 ```
 
+```tsx React Native
+// For UIKit SceneDelegate, use the cross-platform deep link handler instead.
+// See the SwiftUI / Kotlin tab above for the Linking.addEventListener approach.
+```
+
+```dart Flutter
+// For UIKit SceneDelegate, use the cross-platform deep link handler instead.
+// See the SwiftUI / Kotlin tab above for the handleUniversalLink approach.
+```
+</CodeGroup>
+
 ### UIKit (AppDelegate - iOS 12 and earlier)
 
-```swift
+<CodeGroup>
+```swift Swift
 class AppDelegate: UIResponder, UIApplicationDelegate {
     func application(
         _ application: UIApplication,
@@ -121,11 +219,23 @@ class AppDelegate: UIResponder, UIApplicationDelegate {
 }
 ```
 
+```tsx React Native
+// For UIKit AppDelegate, use the cross-platform deep link handler instead.
+// See the SwiftUI / Kotlin tab above for the Linking.addEventListener approach.
+```
+
+```dart Flutter
+// For UIKit AppDelegate, use the cross-platform deep link handler instead.
+// See the SwiftUI / Kotlin tab above for the handleUniversalLink approach.
+```
+</CodeGroup>
+
 ## Step 4: Handle Checkout Results
 
 Use the delegate to respond to checkout completion:
 
-```swift
+<CodeGroup>
+```swift Swift
 class PurchaseManager: ZeroSettleDelegate {
     init() {
         ZeroSettle.shared.delegate = self
@@ -147,6 +257,67 @@ class PurchaseManager: ZeroSettleDelegate {
     }
 }
 ```
+
+```kotlin Kotlin
+class PurchaseManager : ZeroSettleDelegate {
+    override fun zeroSettleCheckoutDidComplete(transaction: ZSTransaction) {
+        // Purchase successful - unlock content
+        unlockProduct(transaction.productId)
+        showSuccessMessage()
+    }
+
+    override fun zeroSettleCheckoutDidCancel(productId: String) {
+        // User cancelled - no action needed, or show a prompt
+    }
+
+    override fun zeroSettleCheckoutDidFail(productId: String, error: Throwable) {
+        // Something went wrong
+        showError(error.localizedMessage)
+    }
+}
+```
+
+```tsx React Native
+ZeroSettle.onEntitlementUpdate((entitlements) => {
+  // Purchase successful - unlock content
+  updatePremiumUI(entitlements);
+});
+
+// Purchases are handled via try/catch
+try {
+  const transaction = await ZeroSettle.purchase(productId, userId);
+  unlockProduct(transaction.productId);
+  showSuccessMessage();
+} catch (error) {
+  if (error.code === 'cancelled') {
+    // User cancelled - no action needed
+  } else {
+    showError(error.message);
+  }
+}
+```
+
+```dart Flutter
+ZeroSettle.instance.entitlementUpdates.listen((entitlements) {
+  // Purchase successful - unlock content
+  updatePremiumUI(entitlements);
+});
+
+// Purchases are handled via try/catch
+try {
+  final transaction = await ZeroSettle.instance.presentPaymentSheet(
+    productId: productId,
+    userId: userId,
+  );
+  unlockProduct(transaction.productId);
+  showSuccessMessage();
+} on ZSCancelledException {
+  // User cancelled - no action needed
+} on ZSCheckoutFailedException catch (e) {
+  showError(e.message);
+}
+```
+</CodeGroup>
 
 ## Callback URL Format
 
@@ -195,13 +366,36 @@ If the redirect isn't working:
 
 ### Manual Testing
 
-You can test the universal link handler directly:
+You can test the link handler directly:
 
-```swift
+<CodeGroup>
+```swift Swift
 // In your app, simulate a callback
 let testURL = URL(string: "https://api.zerosettle.io/checkout/callback?transaction_id=test&product_id=test&status=success")!
 ZeroSettle.shared.handleUniversalLink(testURL)
 ```
+
+```kotlin Kotlin
+// In your app, simulate a callback
+ZeroSettle.handleDeepLink(
+    Uri.parse("https://api.zerosettle.io/checkout/callback?transaction_id=test&product_id=test&status=success")
+)
+```
+
+```tsx React Native
+// In your app, simulate a callback
+ZeroSettle.handleUniversalLink(
+  'https://api.zerosettle.io/checkout/callback?transaction_id=test&product_id=test&status=success'
+);
+```
+
+```dart Flutter
+// In your app, simulate a callback
+await ZeroSettle.instance.handleUniversalLink(
+  'https://api.zerosettle.io/checkout/callback?transaction_id=test&product_id=test&status=success',
+);
+```
+</CodeGroup>
 
 ## Fallback Handling
 
@@ -212,7 +406,8 @@ To handle this case, you can also:
 1. **Poll for transaction status** - The SDK stores a pending transaction ID that can be verified on next app launch
 2. **Restore entitlements** - Call `restoreEntitlements(userId:)` on app launch to sync any missed purchases
 
-```swift
+<CodeGroup>
+```swift Swift
 // On app launch, restore entitlements to catch missed callbacks
 Task {
     let entitlements = try? await ZeroSettle.shared.restoreEntitlements(
@@ -221,6 +416,30 @@ Task {
     updateUI(entitlements)
 }
 ```
+
+```kotlin Kotlin
+// On app launch, restore entitlements to catch missed callbacks
+lifecycleScope.launch {
+    val entitlements = ZeroSettle.restoreEntitlements(userId = currentUser.id)
+    val hasPremium = entitlements.any { it.isActive }
+    updateUI(entitlements)
+}
+```
+
+```tsx React Native
+// On app launch, restore entitlements to catch missed callbacks
+const entitlements = await ZeroSettle.restoreEntitlements(currentUser.id);
+updateUI(entitlements);
+```
+
+```dart Flutter
+// On app launch, restore entitlements to catch missed callbacks
+final entitlements = await ZeroSettle.instance.restoreEntitlements(
+  userId: currentUser.id,
+);
+updateUI(entitlements);
+```
+</CodeGroup>
 
 ---
 
@@ -236,7 +455,8 @@ On Android, checkout callbacks arrive via Android App Links (verified deep links
 
 In your `AndroidManifest.xml`, add a deep link intent filter to your main Activity:
 
-```xml
+<CodeGroup>
+```xml Android (Intent Filter)
 <activity android:name=".MainActivity">
     <intent-filter android:autoVerify="true">
         <action android:name="android.intent.action.VIEW" />
@@ -250,13 +470,25 @@ In your `AndroidManifest.xml`, add a deep link intent filter to your main Activi
 </activity>
 ```
 
+```tsx React Native
+// React Native handles deep links via native configuration.
+// Add the intent-filter above to your Android app's AndroidManifest.xml.
+```
+
+```dart Flutter
+// Flutter handles deep links via the app's native configuration.
+// Add the intent-filter above to your Android app's AndroidManifest.xml.
+```
+</CodeGroup>
+
 The `android:autoVerify="true"` attribute tells Android to verify the domain via a Digital Asset Links file hosted on `api.zerosettle.io`.
 
 ### Step 2: Handle the Callback
 
 In your Activity, handle the deep link in `onNewIntent`:
 
-```kotlin
+<CodeGroup>
+```kotlin Kotlin
 class MainActivity : ComponentActivity() {
     override fun onNewIntent(intent: Intent) {
         super.onNewIntent(intent)
@@ -267,16 +499,45 @@ class MainActivity : ComponentActivity() {
 }
 ```
 
+```tsx React Native
+import { ZeroSettle } from 'react-native-zerosettle-kit';
+import { Linking } from 'react-native';
+
+// Handle deep links
+Linking.addEventListener('url', ({ url }) => {
+  ZeroSettle.handleUniversalLink(url);
+});
+```
+
+```dart Flutter
+// Flutter handles deep links automatically via the native plugin.
+// Ensure your Android intent-filter is configured (see above).
+await ZeroSettle.instance.handleUniversalLink(url);
+```
+</CodeGroup>
+
 ### Step 3: Call onResume
 
 On Android, Custom Tabs have no dismiss callback, so the SDK detects the user's return via `onResume`. Call `ZeroSettle.onResume()` from your Activity:
 
-```kotlin
+<CodeGroup>
+```kotlin Kotlin
 override fun onResume() {
     super.onResume()
     ZeroSettle.onResume()
 }
 ```
+
+```tsx React Native
+// React Native: onResume is handled automatically by the native module.
+// No additional code is needed.
+```
+
+```dart Flutter
+// Flutter: onResume is handled automatically by the native plugin.
+// No additional code is needed.
+```
+</CodeGroup>
 
 This allows the SDK to poll for transaction status when the user returns from the browser.
 
